Make styles consistent

--- a/public/stylesheets/add-forms.0.0.1.scss
+++ b/public/stylesheets/add-forms.0.0.1.scss
@@ -13,4 +13,6 @@
 @import "./elements/icy-ewe-base";
 
 // Components @import "./components/";
+@import "./components/app-structure";
+@import "./components/icy-ewe-header";
 @import "./components/add-form";
