--- a/public/stylesheets/icy-ewe.0.0.3.scss
+++ b/public/stylesheets/icy-ewe.0.0.3.scss
@@ -14,9 +14,6 @@
 
 // Components @import "./components/";
 @import "./components/app-structure";
-@import "./components/site-header";
+@import "./components/icy-ewe-header";
 @import "./components/videos";
 @import "./components/video-container";
-
-// Components
-//@import "../node_modules/bootstrap/scss/bootstrap";
