--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -6,15 +6,15 @@
 
   <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Open+Sans:400,700" rel="stylesheet">
   {{! update this and the file name }}
-  <link rel="stylesheet" href="/assets/stylesheets/icy-ewe.0.0.2.css">
+  <link rel="stylesheet" href="/assets/stylesheets/icy-ewe.0.0.3.css">
 </head>
 
 <body>
   {{#if user.loggedIn}}
     <div class="app">
       <header class="app__header">
-        <div class="site-header">
-          <h1 class="site-header__title">I See You!</h1>
+        <div class="icy-ewe-header">
+          <h1 class="icy-ewe-header__title">I See You!</h1>
         </div>
       </header>
 
@@ -31,8 +31,8 @@
   {{else}}
     <div class="app">
       <header class="app__header">
-        <div class="site-header">
-          <h1 class="site-header__title">I See You!</h1>
+        <div class="icy-ewe-header">
+          <h1 class="icy-ewe-header__title">I See You!</h1>
         </div>
       </header>
       <main class="app__body">
