Text chat and Admin actions

--- a/public/stylesheets/icy-ewe.0.0.3.scss
+++ b/public/stylesheets/icy-ewe.0.0.3.scss
@@ -17,3 +17,5 @@
 @import "./components/icy-ewe-header";
 @import "./components/videos";
 @import "./components/video-container";
+@import "./components/text-chat";
+@import "./components/chat-view";
