--- a/public/stylesheets/components/_contact-section.scss
+++ b/public/stylesheets/components/_contact-section.scss
@@ -13,6 +13,7 @@
   &__contact {
     display: flex;
     align-items: center;
+    position: relative;
     flex-basis: g(43);
     flex-grow: 1;
     margin: $g-2;
@@ -26,6 +27,7 @@
 
     &-detail {
       @include t-body(0);
+      position: relative;
 
       &--name {
         @include t-heading(0);
@@ -47,5 +49,24 @@
     > * + * {
       margin-left: $g-2;
     }
+  }
+
+  &__delete-contact {
+    @include t-body(0);
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    margin: 0;
+    line-height: 50px;
+    text-align: center;
+    opacity: 0;
+    transition: 0.2s;
+    cursor: pointer;
+  }
+
+  &__contact:hover &__delete-contact {
+    opacity: 1;
   }
 }
