--- a/views/add-data.hbs
+++ b/views/add-data.hbs
@@ -18,7 +18,7 @@
     </header>
 
     <main class="app__body">
-      {{#if user.isPrimary}}
+      {{#if user.isAdmin}}
         <div style="display: flex; flex-wrap: wrap;justify-content: center;align-items: flex-start;">
           <form class="add-form add-form--person"
                 action="/add-user"
@@ -32,6 +32,12 @@
                 <label for="input__person_primary">Primary*</label>
                 <div>
                   <input id="input__person_primary" type="checkbox" name="primary">
+                </div>
+              </div>
+              <div class="add-form__field">
+                <label for="input__person_admin">Admin*</label>
+                <div>
+                  <input id="input__person_admin" type="checkbox" name="admin">
                 </div>
               </div>
 
@@ -211,7 +217,7 @@
             </div>
           </form>
         </div>
-      {{#else if user.loggedIn}}
+      {{else if user.loggedIn}}
         <h1>You require admin privileges</h1>
         <p>Sorry, you don't seem to have been given privileges to perform this action.</p>
         <p>Please try one of the following:</p>
