--- a/public/stylesheets/add-forms.0.0.1.scss
+++ b/public/stylesheets/add-forms.0.0.1.scss
@@ -7,6 +7,7 @@
 @import "./tools/sizing.scss";
 @import "./tools/text.scss";
 @import "./tools/box.scss";
+@import "./tools/clearfix.scss";
 
 // Elements @import "./elements/";
 @import "./elements/resets";
@@ -14,5 +15,5 @@
 
 // Components @import "./components/";
 @import "./components/app-structure";
-@import "./components/icy-ewe-header";
+@import "./components/main-header";
 @import "./components/add-form";
