--- a/public/stylesheets/components/_main-header.scss
+++ b/public/stylesheets/components/_main-header.scss
@@ -14,7 +14,7 @@
     top: 0;
     left: 0;
     z-index: 1;
-    transform: scaleY(0);
+    transform: translateY(-100%);
     transform-origin: 50% 0;
     width: 100%;
     padding: g($main-header-padding) $g-5;
@@ -24,13 +24,26 @@
     font-weight: 800;
     font-size: 24px;
     background-color: $gray-8;
-    transition: transform 0.1s ease-in;
+    transition: transform 0.15s ease-in;
     pointer-events: initial;
 
     .body--header-hidden & {
-      transform: scaleY(1);
-      transition: transform 0.1s ease-out;
+      transform: translateY(0);
+      transition: transform 0.15s ease-out;
     }
+  }
+
+  &--static {
+    height: auto;
+  }
+
+  &--static &__content {
+    transform: none;
+  }
+
+  &--dark &__content {
+    color: $gray-8;
+    background-color: $gray-2;
   }
 }
 
