--- a/public/stylesheets/preco.0.0.3.scss
+++ b/public/stylesheets/preco.0.0.3.scss
@@ -7,6 +7,7 @@
 @import "./tools/sizing.scss";
 @import "./tools/text.scss";
 @import "./tools/box.scss";
+@import "./tools/clearfix.scss";
 
 // Elements @import "./elements/";
 @import "./elements/resets";
