--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -56,6 +56,9 @@
 
     <script>
       var USER_CHAT_NAME = "{{ user.data.name }}";
+      {{#if debug}}
+        var DEBUG_MODE = "{{ user.data.name }}";
+      {{/if}}
     </script>
     <script src="https://cdn.temasys.io/skylink/skylinkjs/0.6.x/skylink.complete.js"></script>
     <script src="/assets/javascripts/icy-ewe.0.0.2.js"></script>
