--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -55,10 +55,13 @@
     </div>
 
     <script>
-      var USER_CHAT_NAME = "{{ user.data.name }}";
-      {{#if debug}}
-        var DEBUG_MODE = "{{ user.data.name }}";
-      {{/if}}
+      var ICY_EWE = {
+       {{#if debug}}
+        DEBUG_MODE     : true,
+       {{/if}}
+        USER_LOGGED_IN : "{{ user.loggedIn }}",
+        USER_CHAT_NAME : "{{ user.data.name }}"
+      };
     </script>
     <script src="https://cdn.temasys.io/skylink/skylinkjs/0.6.x/skylink.complete.js"></script>
     <script src="/assets/javascripts/icy-ewe.0.0.2.js"></script>
