--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -22,7 +22,7 @@
         <header class="main-header main-header--static main-header--dark">
           <div class="main-header__wrapper">
             <div class="main-header__content">
-              Preco
+              <h1 class="main-header__title">Preco</h1>
             </div>
           </div>
         </header>
@@ -64,7 +64,7 @@
       };
     </script>
     <script src="https://cdn.temasys.io/skylink/skylinkjs/0.6.x/skylink.complete.js"></script>
-    <script src="/assets/javascripts/icy-ewe.0.0.2.js"></script>
+    <script src="/assets/javascripts/icy-ewe.0.0.3.js"></script>
   {{else}}
     <div class="app">
       <header class="app__header">
