--- a/views/add-data.hbs
+++ b/views/add-data.hbs
@@ -15,7 +15,7 @@
       <header class="main-header main-header--static main-header--dark">
         <div class="main-header__wrapper">
           <div class="main-header__content">
-            Preco
+            <h1 class="main-header__title">Preco</h1>
           </div>
         </div>
       </header>
