--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
   <header class="main-header">
     <div class="main-header__wrapper">
       <div class="main-header__content">
-        Preco
+        <h1 class="main-header__title">Preco</h1>
       </div>
     </div>
   </header>
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="contact-section__contact-details">
-                  {{#if ../user.isPrimary}}
+                  {{#if ../user.isAdmin}}
                     <button class="contact-section__delete-contact"
                             onclick="if(confirm('Are you sure you want to delete this person?')){location.href='/delete-person/{{ this.id }}'}">x</button>
                   {{/if}}
