--- a/views/log-in.hbs
+++ b/views/log-in.hbs
@@ -3,9 +3,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{ title }}</title>
+  <link rel="stylesheet" href="/assets/stylesheets/preco.0.0.4.css">
 </head>
 
 <body>
+  <header class="main-header main-header--static">
+    <div class="main-header__wrapper">
+      <div class="main-header__content">
+        <h1 class="main-header__title">Preco</h1>
+      </div>
+    </div>
+  </header>
+
   <hr>
   <form action="/log-in" method="post">
     <label for="email_input">email</label>
