JS Modules and Person Role

--- a/views/add-data.hbs
+++ b/views/add-data.hbs
@@ -88,6 +88,13 @@
               </div>
 
               <div class="add-form__field">
+                <label for="input__person_role">Role</label>
+                <div>
+                  <input id="input__person_role" type="tel" name="role_2" placeholder="CEO">
+                </div>
+              </div>
+
+              <div class="add-form__field">
                 <label for="input__person_id">Company*</label>
                 <select id="input__person_id" name="company_id" required>
                   <option label="-- Choose --" selected disabled></option>
