--- a/views/index.hbs
+++ b/views/index.hbs
@@ -87,7 +87,7 @@
                   {{ this.name }}{{#if this.isUser}} - You{{/if}}</p>
                 <p class="contact-section__contact-detail contact-section__contact-detail--role">
                   {{#if this.role }}
-                    {{ this.role }} at
+                    {{ this.role }} <small>at</small>
                   {{/if}}
                   {{ this.company.name }}</p>
                 {{#if this.phone_1 }}
