--- a/public/stylesheets/components/_video-container.scss
+++ b/public/stylesheets/components/_video-container.scss
@@ -11,6 +11,11 @@
     left: 0;
     width: 100%;
     height: 100%;
+    pointer-events: none;
+
+    > * {
+      pointer-events: initial;
+    }
   }
 
   &__switch-level-button {
