--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -64,7 +64,8 @@
       };
     </script>
     <script src="https://cdn.temasys.io/skylink/skylinkjs/0.6.x/skylink.complete.js"></script>
-    <script src="/assets/javascripts/icy-ewe.0.0.3.js"></script>
+    <script type="module" src="/assets/javascripts/icy-ewe.0.0.3.js"></script>
+    <script nomodule      src="/assets/javascripts/icy-ewe-bundle.0.0.3.js"></script>
   {{else}}
     <div class="app">
       <header class="app__header">
