--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -4,7 +4,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{ title }}</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Open+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Open+Sans:400,700"
+        rel="stylesheet"
+        media="none" onload="media='all'">
   {{! update this and the file name }}
   <link rel="stylesheet" href="/assets/stylesheets/icy-ewe.0.0.4.css">
 </head>
