--- a/views/log-in.hbs
+++ b/views/log-in.hbs
@@ -3,6 +3,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{ title }}</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Open+Sans:400,700"
+        rel="stylesheet"
+        media="none" onload="media='all'">
   <link rel="stylesheet" href="/assets/stylesheets/preco.0.0.4.css">
 </head>
 
