--- a/public/stylesheets/components/_main-nav.scss
+++ b/public/stylesheets/components/_main-nav.scss
@@ -1,10 +1,17 @@
 .main-nav {
-  display: flex;
-  padding: $g-1 $g-5;
   background-color: white;
+
+  &__nav-items {
+    display: flex;
+    width: calc(100% - #{ $g-4 });
+    max-width: g(147);
+    padding: 0 $g-3;
+    margin: 0 auto;
+  }
 
   &__nav-item {
     flex-grow: 1;
+    padding: $g-1 0;
     line-height: $g-4;
     font-family: $f-body;
     font-size: $g-2;
